# AliRoot

TPC/TPCbase/: AliTPCPoissonSolver.cxx  AliTPCSpaceCharge3DCalc.cxx  AliTPCSpaceCharge3DCalc.h  AliTPCSpaceCharge3DDriftLine.cxx  AliTPCSpaceCharge3DDriftLine.h  CMakeLists.txt  TPCbaseLinkDef.h
TPC/TPCbase/SpaceCharge-standalone/: CMakeLists.txt  O2TPCSpaceChargeLinkDef.h
TPC/TPCbase/test/: AliTPCSpaceCharge3DDriftLineTest.C
